# sims

./: .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt  cholesky.cpp  clustering.cpp
include/sims/: cholesky.h  clustering.h  constants.h  datagen.h  linalg.h  link.h  linkmodel.h  math.h  node.h  ostr.h  qr.h  radiomodel.h  svd.h
libs/: CMakeLists.txt
src/: cholesky.cpp  clustering.cpp  datagen.cpp  linalg.cpp  link.cpp  linkmodel.cpp  math.cpp  node.cpp  radiomodel.cpp
test/: CMakeLists.txt  test.cpp
